add alt sponsor

--- a/en/index.html
+++ b/en/index.html
@@ -219,23 +219,23 @@
                 </div><!-- /col12-->
 
                 <div class="col-md-4">
-                  <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt=""></a></p>
+                  <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt="Activdesign"></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt=""></a></p>
+                  <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt="Jardin Moderne"></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt=""></a></p>
+                  <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt="Istic"></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                  <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt=""></a></p>
+                  <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt="Google font"></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-4">
-                  <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
+                  <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt="KDE"></a></p>
                 </div><!-- /col2 -->
 
                 <div class="col-md-12">
@@ -256,23 +256,7 @@
             <div class="row">
               <div class="col-md-4 text-white">
                 <p class="footerContent">Made by <a class="linkcor2" href="https://activ.studio/">Activstudio</a></p>
-              </div><!-- /col3 -->
-  <!--
-              <div class="col-md-4">
-                  <ul>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                    <li><a href="#">bla bla bla</a></li>
-                  </ul>
-                </div> /col3 -->
-  <!--
-                <div class="col-md-4">
-                    <ul>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                      <li><a href="#">bla bla bla</a></li>
-                    </ul>
-                  </div> /col3 -->
+              </div>
             </div><!-- /row -->
           </div><!-- /container-->
   
