--- a/en/submission_sent.html
+++ b/en/submission_sent.html
@@ -100,6 +100,10 @@
                     <article class="col-12 cor1 pb-4 p-4 sendgood">
                         <p>Your message have been send successfully!</p>
                     </article>
+                  <article class="col-12 cor2 pb-4">
+                    <p>Please, fill our <a href="feedback.html" alt="feedback">New Form</a> to help us promote LGM
+                    </p>
+                  </article>
                     <div class="col-12">
                         <h2 class="text-center">Submit your proposal !</h2>
                         <p class="text-center mt-4">You plan to come to LGM for offering us a conference ? a workshop ? Please don't be shy and submit your proposal.</p>
