--- a/en/submission_sent.html
+++ b/en/submission_sent.html
@@ -98,10 +98,10 @@
               <div class="container">
                 <div class="row">
                     <article class="col-12 cor1 pb-4 p-4 sendgood">
-                        <p>Your message have been send successfully!</p>
+                        <p class="text-center" >Your message have been send successfully!</p>
                     </article>
                   <article class="col-12 cor2 pb-4">
-                    <p>Please, fill our <a href="feedback.html" alt="feedback">New Form</a> to help us promote LGM
+                    <p class="text-center">Please, fill our <a href="feedback.html" class="btn btn-cor2" alt="feedback">New Form</a> to help us promote LGM
                     </p>
                   </article>
                     <div class="col-12">
