--- a/en/register_sent.html
+++ b/en/register_sent.html
@@ -105,8 +105,12 @@
 
                  <div class="row">   
                     <article class="col-lg-8 offset-lg-2 col-md-12 cor4 pb-4 p-4 sendgood">
-                        <p>Your message have been send successfully!</p>
+                        <p>Your registration has been sent successfully!</p>
                     </article>
+                   <article class="col-12 cor3 pb-4">
+                    <p class="text-center">Please, fill our <a href="feedback.html" class="btn btn-cor2" alt="feedback">New Form</a> to help us promote LGM
+                    </p>
+                   </article>
                    <article class="col-lg-8 offset-lg-2 col-md-12 cor4 pb-4">                                   
                       <form class="mt-4" id="Confcall" method="post" action="../register-lgm.php">
                         <h3 class="mt-4 mb-4 text-center">About you</h3>
