--- a/en/register_sent.html
+++ b/en/register_sent.html
@@ -107,7 +107,7 @@
                     <article class="col-lg-8 offset-lg-2 col-md-12 cor4 pb-4 p-4 sendgood">
                         <p class="text-center">Your registration has been sent successfully!</p>
                     </article>
-                   <article class="col-lg-8 cor3 pb-4">
+                   <article class="col-lg-8 offset-lg-2 col-md-12 cor3 pb-4">
                     <p class="text-center">Please, fill our <a href="feedback.html" class="btn btn-cor2" alt="feedback">New Form</a> to help us promote LGM
                     </p>
                    </article>
