--- a/fr/temoignage.html
+++ b/fr/temoignage.html
@@ -131,7 +131,7 @@
                             <input type="text" id="name" name="name" placeholder="Martin Jean ou pseudo" maxlength="100" class="form-control">
                         </div>               
                           <div class="form-group">
-                            <p>En nous soumettant vos réponse, vous acceptez et comprenez que le contenu servira à soutenir et diffuser la publicité autour de cet événement.</p>
+                            <p>En nous soumettant vos réponses, vous acceptez et comprenez que le contenu servira à soutenir et diffuser la publicité autour de cet événement.</p>
                           </div>
                            <button class="btn btn-cor5 btn-block btn-lg" type="submit">Soumettre</button>
                           </form>
