--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -129,6 +129,51 @@
         <section class="cor2">
             <div class="container">
                 <div class="row">
+                    <div class="col-6">
+                        <h2 class="text-center">Sponsoring Libre Graphics Meeting</h2>
+
+                    <p class="mt-4">The Libre Graphics Meeting (LGM) is the annual meeting for developers and users of free software graphics applications to collaborate and advance the cause of high-quality Free/Libre graphics software. Since 2006, Inkscape, Scribus, GIMP, Blender, Krita, Open Clip Art Library, Open Font Library and other Free/Libre and Open Source Graphics communities have come together for this annual developer and user conference. This year, we are hoping to expand our conversations beyond these established Open Source communities and reach a wider audience, particularly in the fields of Open Source hardware, product design and architecture.</p>
+
+                    <p class="mt-4">During the last 15 years of LGM, we have visiting many cities in Europe and North America and have had participants and speakers from across the world. It is our goal to continue to expand the coverage and impact of Free/Libre software globally, through the Libre Graphics Meeting.</p>
+
+                    <p class="mt-4">As part of our commitment to open-ness and participation in technology, we aim to provide travel subsidies to ALL speakers coming to the Libre Graphics Meeting. Because of this endeavour, LGM has become the place in which they can discuss their projects, coordinate their efforts and, crucially, to meet in person. Participants in the LGM include developers, designers, academics and activists from around the world, who are all passionate about Free/Libre graphics software and technology.</p>
+
+                    <p class="mt-4">We welcome sponsors who want to help us achieve our goals and are able to provide financial support for our movement – any contribution received will be used to provide travel subsidies to the speakers at LGM.</p>
+          
+                </div><!-- /col6 -->
+
+                <div class="col-6">
+                  <p>The Libre Graphics Meeting organisation is currently seeking sponsorship at the following levels:</p>
+                  <div class="col4">
+                    <h4>Gold Sponsor</h4>
+                    <p>3.000 €</p>
+                    <p>Your organisation thanked in a sponsorship announcement release and in all press releases.
+                        Your logo and link on sponsors page of the website.
+                        Your logo in print materials at the event.</p>
+                  </div>
+
+                  <div class="col4">
+                      <h4>Silver Sponsor</h4>
+                      <p>2.000 €</p>
+                      <p>
+                          Your logo and link on sponsors page of the website.
+                          Your logo in print materials at the event.</p>
+                  </div>
+
+                  <div class="col4">
+                     <h4>Bronze Sponsor</h4>
+                     <p>1.000 €</p>
+                     <p>Your logo and link on sponsors page of the website.
+                      </p>
+                   </div>
+                </div>
+            </div><!-- /row-->
+        </div><!-- /container-->
+    </section>
+
+        <section class="cor3">
+            <div class="container">
+                <div class="row">
                     <div class="col-12">
                         <h2 class="text-center">Add your organization or company</h2>
                     <p class="mt-4">Please <a href="contact.html" class="maplink">Contact us to add your organization or company.</a></p>
