--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -13,7 +13,7 @@
     <!-- Css custom -->
     <link rel="stylesheet" href="../css/lgm20.css" />
 
-    <title>Contact LGM 2020</title>
+    <title>Sponsors LGM 2020</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
