--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -129,8 +129,11 @@
         <section class="cor2">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12">
                         <h2 class="text-center">Sponsoring Libre Graphics Meeting</h2>
+                    </div>
+
+                    <div class="col-6">
 
                     <p class="mt-4">The Libre Graphics Meeting (LGM) is the annual meeting for developers and users of free software graphics applications to collaborate and advance the cause of high-quality Free/Libre graphics software. Since 2006, Inkscape, Scribus, GIMP, Blender, Krita, Open Clip Art Library, Open Font Library and other Free/Libre and Open Source Graphics communities have come together for this annual developer and user conference. This year, we are hoping to expand our conversations beyond these established Open Source communities and reach a wider audience, particularly in the fields of Open Source hardware, product design and architecture.</p>
 
