--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -146,10 +146,10 @@
                 </div><!-- /col6 -->
 
                 <div class="col-6">
-                  <p>The Libre Graphics Meeting organisation is currently seeking sponsorship at the following levels:</p>
+                  <p class="mt-4">The Libre Graphics Meeting organisation is currently seeking sponsorship at the following levels:</p>
                   <div class="col4">
                     <h4>Gold Sponsor</h4>
-                    <p>3.000 €</p>
+                    <p class="mt-4">3.000 €</p>
                     <p>Your organisation thanked in a sponsorship announcement release and in all press releases.
                         Your logo and link on sponsors page of the website.
                         Your logo in print materials at the event.</p>
@@ -157,7 +157,7 @@
 
                   <div class="col4">
                       <h4>Silver Sponsor</h4>
-                      <p>2.000 €</p>
+                      <p class="mt-4">2.000 €</p>
                       <p>
                           Your logo and link on sponsors page of the website.
                           Your logo in print materials at the event.</p>
@@ -165,7 +165,7 @@
 
                   <div class="col4">
                      <h4>Bronze Sponsor</h4>
-                     <p>1.000 €</p>
+                     <p class="mt-4">1.000 €</p>
                      <p>Your logo and link on sponsors page of the website.
                       </p>
                    </div>
