--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -105,23 +105,23 @@
                             </div><!-- /col12-->
 
                             <div class="col-md-4 mt-4">
-                            <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt=""></a></p>
+                            <p><a href="https://activdesign.eu/"><img class="img-fluid sponsors" src="../css/img/logopartner1.png" alt="Activdesign"></a></p>
                             </div><!-- /col2 -->
 
                             <div class="col-md-4 mt-4">
-                            <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt=""></a></p>
+                            <p><a href="http://www.jardinmoderne.org/"><img class="img-fluid sponsors" src="../css/img/jardinmoderne.png" alt="Jardin Moderne"></a></p>
                             </div><!-- /col2 -->
 
                             <div class="col-md-4 mt-4">
-                            <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt=""></a></p>
+                            <p><a href="https://istic.univ-rennes1.fr/"><img class="img-fluid sponsors" src="../css/img/logo-istic.png" alt="Istic"></a></p>
                             </div><!-- /col2 -->
 
                             <div class="col-md-4 mt-4">
-                            <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt=""></a></p>
+                            <p><a href="https://fonts.google.com/about"><img class="img-fluid sponsors" src="../css/img/google-2.png" alt="Google"></a></p>
                             </div><!-- /col2 -->
 
                             <div class="col-md-4 mt-4">
-                            <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt=""></a></p>
+                            <p><a href="https://ev.kde.org/"><img class="img-fluid sponsors" src="../css/img/kde-logo-white-blue-rounded-128x128.png" alt="KDE"></a></p>
                             </div><!-- /col2 -->
                         </div><!-- /row-->
                     </div><!-- /container-->
@@ -150,17 +150,20 @@
                   <div class="col4">
                     <h4>Gold Sponsor</h4>
                     <p class="mt-4">3.000 €</p>
-                    <p>Your organisation thanked in a sponsorship announcement release and in all press releases.
-                        Your logo and link on sponsors page of the website.
-                        Your logo in print materials at the event.</p>
+                    <ul>
+                      <li>Your organisation thanked in a sponsorship announcement release and in all press releases.</li>
+                      <li>Your logo and link on sponsors page of the website.</li>
+                      <li>Your logo in print materials at the event.</li>
+                        </ul>
                   </div>
 
                   <div class="col4">
                       <h4>Silver Sponsor</h4>
                       <p class="mt-4">2.000 €</p>
-                      <p>
-                          Your logo and link on sponsors page of the website.
-                          Your logo in print materials at the event.</p>
+                      <ul>
+                          <li>Your logo and link on sponsors page of the website.</li>
+                          <li>Your logo in print materials at the event.</li>
+                      </ul>
                   </div>
 
                   <div class="col4">
