--- a/en/sponsors.html
+++ b/en/sponsors.html
@@ -148,22 +148,20 @@
                 <div class="col-6">
                   <p class="mt-4">The Libre Graphics Meeting organisation is currently seeking sponsorship at the following levels:</p>
                   <div class="col4">
-                    <h4>Gold Sponsor</h4>
+                    <h2>Gold Sponsor</h2>
                     <p class="mt-4">3.000 €</p>
-                    <ul>
-                      <li>Your organisation thanked in a sponsorship announcement release and in all press releases.</li>
-                      <li>Your logo and link on sponsors page of the website.</li>
-                      <li>Your logo in print materials at the event.</li>
-                        </ul>
+                    <p>Your organisation thanked in a sponsorship announcement release and in all press releases.
+                      <br />Your logo and link on sponsors page of the website.
+                      <br />Your logo in print materials at the event.
+                    </p>
                   </div>
 
                   <div class="col4">
-                      <h4>Silver Sponsor</h4>
+                      <h3>Silver Sponsor</h3>
                       <p class="mt-4">2.000 €</p>
-                      <ul>
-                          <li>Your logo and link on sponsors page of the website.</li>
-                          <li>Your logo in print materials at the event.</li>
-                      </ul>
+                      <p>Your logo and link on sponsors page of the website.
+                          <br />Your logo in print materials at the event.
+                        </p>
                   </div>
 
                   <div class="col4">
