update deadline for proposals to March 1st

--- a/en/program.html
+++ b/en/program.html
@@ -142,7 +142,7 @@
 
                         <h3>Submission details</h3>
 
-                        <p>The deadline for submissions is February 17th 2020. Selected proposals will be notified by email before the end of February. After this date, you will still have the possibility to do a lightning talk if you want to during the event.</p>
+                        <p>The deadline for submissions is March 1st 2020. Selected proposals will be notified by email around mid-March. After this date, you will still have the possibility to do a lightning talk if you want to during the event.</p>
 
 
                         <h3>State of Libre Graphics</h3>
