--- a/fr/programme.html
+++ b/fr/programme.html
@@ -145,7 +145,7 @@
 
                         <h3>Détails pour les propositions</h3>
 
-                        <p>La date limite pour les propositions est le 17 Février 2020. Les propositions sélectionnées seront notifiées par email avant la fin du mois de Février. Après cette date, vous aurez toujours la possibilité de proposer une présentation éclair durant l'événement.</p>
+                        <p>La date limite pour les propositions est le 1er Mars 2020. Les propositions sélectionnées seront notifiées par email vers la mi-Mars. Après cette date, vous aurez toujours la possibilité de proposer une présentation éclair durant l'événement.</p>
                       </div>
                       <div class="col-6">
                           <p><img src="../css/img/table-ronde-Livio-Fania.png" alt="" class="img-fluid"></p>
