add important info

--- a/fr/index.html
+++ b/fr/index.html
@@ -102,9 +102,9 @@
                            <div class="col-12">
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
-                        <p class="card-text text-center mt-4 mb-4">
+<!--                        <p class="card-text text-center mt-4 mb-4">
                             <a href="programme.html" class="btn btn-cor1 btn-lg">Proposez votre conférence</a>
-                        </p>
+                        </p>-->
                      </div>
                     <div class="col-md-4 col-sm-12">
                       <p class="text-center"><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt=""></p>                                        
@@ -123,6 +123,14 @@
               <div class="container">
                 <div class="row">
                     <div class="col-12">
+                        <div class="text-center importantinfo">
+                        <h2 class="text-center h2">Information</h2>
+                        <p class="text-center importantinfo">
+                            Avec la situation d'épidémie actuelle, nous ne sommes toujours pas certains que le LGM puisse se tenir physiquement cette année. Nous suivons attentivement l'évolution, et nous prendrons une décision d'ici la fin avril.<br/><br/>
+                            Nous vous tiendrons informé dès que nous aurons pris une décision, merci de votre patience.
+                        </p>
+                        </div>
+                        <br/>
                         <h2 class="text-center">Participez à cette édition !</h2>
                         <p class="mt-4">Les Libre Graphics Meeting (LGM) est une rencontre annuelle et nomade pour et par la communauté active dans le logiciel libre graphique. La première rencontre a commencé en mars 2006.</p>
                     </div><!-- /col12-->
