update important information

--- a/en/index.html
+++ b/en/index.html
@@ -101,9 +101,9 @@
                           <div class="col-12">
                             <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
-                             <!--<p class="card-text text-center mt-4 mb-4">-->
-                              <!--<a href="program.html" class="btn btn-cor1 btn-lg">Submit your proposals </a>-->
-                            <!--</p>-->                            
+                             <p class="card-text text-center mt-4 mb-4">
+                              <a href="#information" class="btn btn-cor4 btn-lg">Important information</a>
+                            </p>
                           </div><!-- col12 -->
                           <div class="col-sm-12 col-md-4">
                             <p><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt="logo"></p>
@@ -121,11 +121,12 @@
               <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="text-center importantinfo">
-                        <h2 class="text-center h2">Information</h2>
+                        <div id="information" class="text-center importantinfo">
+                        <h2 class="text-center h2">Important information</h2>
                         <p class="text-center importantinfo">
-                              Due to the current epidemic situation, we are still not sure if the LGM will happen physically this year. We are following carefully the evolution, and will take a decision by the end of April.<br/><br/>
-                              We will let you know as soon as a decision is taken, please be patient.
+                              Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.<br/>
+                              We are now evaluating the possibility to make an online event this year.<br/><br/>
+                              Please stay tuned.
                         </p>
                         </div>
                         <br/>
