--- a/fr/index.html
+++ b/fr/index.html
@@ -102,12 +102,12 @@
                            <div class="col-12">
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
                             <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
-<!--                        <p class="card-text text-center mt-4 mb-4">
-                            <a href="programme.html" class="btn btn-cor1 btn-lg">Proposez votre conférence</a>
-                        </p>-->
+                        <p class="card-text text-center mt-4 mb-4">
+                            <a href="#information" class="btn btn-cor4 btn-lg">Informations importantes</a>
+                        </p>
                      </div>
                     <div class="col-md-4 col-sm-12">
-                      <p class="text-center"><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt=""></p>                                        
+                      <p class="text-center"><img class="img-fluid" src="../css/img/lgm2020-full-opti.png" alt=""></p>
                     </div><!-- /col4-->
                     <div class="col-md-8 col-sm-12">
                     <p class="text-center"><img src="../css/img/lgm-illu.png" alt="" class="img-fluid"></p>
@@ -123,11 +123,12 @@
               <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="text-center importantinfo">
-                        <h2 class="text-center h2">Information</h2>
+                        <div id="information" class="text-center importantinfo">
+                        <h2 class="text-center h2">Informations importantes</h2>
                         <p class="text-center importantinfo">
-                            Avec la situation d'épidémie actuelle, nous ne sommes toujours pas certains que le LGM puisse se tenir physiquement cette année. Nous suivons attentivement l'évolution, et nous prendrons une décision d'ici la fin avril.<br/><br/>
-                            Nous vous tiendrons informé dès que nous aurons pris une décision, merci de votre patience.
+                            Avec la situation de pandémie actuelle et les restrictions de voyage, nous avons finalement décidé de reporter le Libre Graphics Meeting à Rennes en 2021.<br/>
+                            Nous évaluons maintenant la possibilité d'un événement en ligne pour cette année.<br/><br/>
+                            Merci de rester à l'écoute.
                         </p>
                         </div>
                         <br/>
