online event announcement

--- a/en/index.html
+++ b/en/index.html
@@ -100,7 +100,8 @@
                         <div class="row">
                           <div class="col-12">
                             <h1 class="card-title text-center">Libre Graphics Meeting 2020</h1>
-                            <h2 class="text-center h1 shadow">26-29 May in Rennes, France</h2>
+                            <h2 class="text-center h1 shadow"><strike>26-29 May in Rennes, France</strike></h2>
+                            <h2 class="text-center h1 shadow">27-29 May, Online</h2>
                              <p class="card-text text-center mt-4 mb-4">
                               <a href="#information" class="btn btn-cor4 btn-lg">Important information</a>
                             </p>
@@ -124,9 +125,9 @@
                         <div id="information" class="text-center importantinfo">
                         <h2 class="text-center h2">Important information</h2>
                         <p class="text-center importantinfo">
-                              Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.<br/>
-                              We are now evaluating the possibility to make an online event this year.<br/><br/>
-                              Please stay tuned.
+                              Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.<br/><br/>
+                              For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.<br/>
+                              The program will be announced soon, please stay tuned.<br/><br/>
                         </p>
                         </div>
                         <br/>
