--- a/fr/index.html
+++ b/fr/index.html
@@ -101,7 +101,8 @@
                          <div class="row">
                            <div class="col-12">
                             <h1 class="card-title text-center">Le Libre Graphics Meeting 2020</h1>
-                            <h2 class="text-center h1 shadow">26-29 Mai à Rennes, France</h2>
+                            <h2 class="text-center h1 shadow"><strike>26-29 Mai à Rennes, France</strike></h2>
+                            <h2 class="text-center h1 shadow">27-29 Mai, en ligne</h2>
                         <p class="card-text text-center mt-4 mb-4">
                             <a href="#information" class="btn btn-cor4 btn-lg">Informations importantes</a>
                         </p>
@@ -126,9 +127,9 @@
                         <div id="information" class="text-center importantinfo">
                         <h2 class="text-center h2">Informations importantes</h2>
                         <p class="text-center importantinfo">
-                            Avec la situation de pandémie actuelle et les restrictions de voyage, nous avons finalement décidé de reporter le Libre Graphics Meeting à Rennes en 2021.<br/>
-                            Nous évaluons maintenant la possibilité d'un événement en ligne pour cette année.<br/><br/>
-                            Merci de rester à l'écoute.
+                            Avec la situation de pandémie actuelle et les restrictions de voyage, nous avons finalement décidé de reporter le Libre Graphics Meeting à Rennes en 2021.<br/><br/>
+                            Pour cette année nous organisons l'événement en ligne. Les présentations et ateliers seront diffusés en ligne du 27 au 29 Mai.<br/>
+                            Le programme sera annoncé bientôt, merci de rester à l'écoute.<br/><br/>
                         </p>
                         </div>
                         <br/>
